2008-03-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Code for the case of |</div>| and so on are revised
	to align with new spec text (HTML5 revision 1320).

2008-03-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Remove strange |if| condition; however, it should
	have had no harm in theory.

2008-03-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (_tree_construction_main): '</p>' in body
	case is split from other end tags for the preparation
	of implementing HTML revision 1320.

2008-03-07  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Simplified "generate implied end tag" (HTML5
	revision 1320).

2008-03-07  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (_tree_construction_main): Merge rules for "h1"
	and "div" (HTML5 revision 1318).  Add comments to where
	|form| pointer association codes should be inserted (HTML5 revision
	1319).

2008-03-06  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: <html> treatement refined (HTML5 revision 1314).

2008-03-05  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Since the case t268 should never be reached (no
	other token type, there are), it is replaced by a |die| statement.

2008-03-05  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Typo fixed.

2008-03-04  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (_tree_construction_initial): Some limited quirks
	doctypes were not uppercased for comparison.

2008-03-03  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (tree construction and set_inner_html): Checkpoints
	are added.

2008-03-03  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (_tokenize_attempt_to_consume_an_entity): Checkpoints
	are set.  Cases that are unlikely reached are noted as so.

2008-03-03  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Checkpoints for debugging are added.

	* mkhtmlparser.pl: Support for |!!!cp| syntax.

2008-03-03  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src, mkhtmlparser.pl: s/_input_character/_char/g
	for simplicity.

2008-03-03  Wakaba  <wakaba@suika.fam.cx>
