@@ -1,7 +1,7 @@
 1..1502
 # Running under perl version 5.008007 for linux
-# Current time local: Sat Mar  8 11:43:53 2008
-# Current time GMT:   Sat Mar  8 02:43:53 2008
+# Current time local: Sat Mar  8 11:51:33 2008
+# Current time GMT:   Sat Mar  8 02:51:33 2008
 # Using Test.pm version 1.25
 # t/content-model-1.dat
 ok 1
