@@ -1,5 +1,11 @@
 2008-03-08  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm.src: A "generate implied end tags" code (t409.1)
+	could not be reached so that it is now removed (HTML5 revision
+	1320).
+
+2008-03-08  Wakaba  <wakaba@suika.fam.cx>
+
 	* HTML.pm.src: Code for the case of |</div>| and so on are revised
 	to align with new spec text (HTML5 revision 1320).
 
